<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">

    <Button
        android:id="@+id/buttonEditarTrabajo"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:text="@string/EditButton"
        app:layout_constraintEnd_toStartOf="@+id/buttonBorrarTrabajo"
        app:layout_constraintTop_toBottomOf="@+id/txtDepartamentoValor" />

    <Button
        android:id="@+id/buttonBorrarTrabajo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/DeleteButton"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEditarTrabajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonEditarTrabajo" />

    <TextView
        android:id="@+id/txtNombreTrabajo"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/trabajoNombre"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtSalarioMin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSalarioMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/trabajoSalarioMinimo"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtSalarioMax"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreTrabajo" />

    <TextView
        android:id="@+id/txtSalarioMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/trabajoSalarioMaximo"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtDepartamento"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioMin" />

    <TextView
        android:id="@+id/txtDepartamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/trabajoDepartamento"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioMax" />

    <TextView
        android:id="@+id/txtNombreTrabajoValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/trabajoNombreValor"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/txtSalarioMax"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSalarioMinValor"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/trabajoSalarioMinimoValor"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/txtNombreTrabajoValor"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreTrabajoValor" />

    <TextView
        android:id="@+id/txtSalarioMaxValor"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/trabajoSalarioMaximoValor"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/txtSalarioMinValor"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioMinValor" />

    <TextView
        android:id="@+id/txtDepartamentoValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/trabajoDepartamentoValor"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/txtSalarioMaxValor"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioMaxValor" />

</androidx.constraintlayout.widget.ConstraintLayout>